sidebar thumbnail spacing fix

--- a/webroot/css/base.css
+++ b/webroot/css/base.css
@@ -116,7 +116,7 @@ footer.footer {
 }
 
 .sidebar-thumbnail-grid > * {
-  margin: 1.5% 1%;
+  margin: 1%;
   width: 31%;
   height: 1%;
 }
